# muccc-rust-mobs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix
efi-best-api/: .gitignore  Cargo.toml  Makefile  OVMF_CODE.fd
efi-best-api/src/: ball.rs  main.rs
floppy-crab/: .gitattributes  Cargo.toml
floppy-crab/src/: main.rs  todo.md
lobster-lua/: Cargo.toml  grammar.txt  precedence.txt  sample.lua
lobster-lua/src/: e2e.rs  fraction.rs  main.rs  parser.rs  tokenizer.rs
lobster-lua/src/snapshots/: lobster_lua__parser__tests__break_break_mic_check_do_you_read.snap  lobster_lua__parser__tests__parse_assigment.snap  lobster_lua__parser__tests__parse_func_call.snap  lobster_lua__parser__tests__parse_lobster_emoji_identifier.snap  lobster_lua__parser__tests__precedence_and_left_associative.snap  lobster_lua__parser__tests__precedence_plus_both_sides_of_and.snap  lobster_lua__parser__tests__precedence_plus_left_associative.snap  lobster_lua__parser__tests__precedence_plus_over_and.snap  lobster_lua__parser__tests__return_inside_block.snap  lobster_lua__parser__tests__return_nothing.snap  lobster_lua__parser__tests__return_something.snap
paywall/: Cargo.toml
paywall/src/: main.rs
paywall/static/: index.html  styles.css
paywall/templates/: link-result.html  paywall.html
raytrace/: .gitignore  Cargo.toml  timing.ppm
raytrace/src/: colour.rs  main.rs  obj.rs  ppm.rs
sudoku/: Cargo.toml  Readme.md  example.csv
sudoku/src/: bitfield_tactics.rs  main.rs
