[package]
name = "efi-best-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.25"
smoltcp = "0.12.0"
uefi = { version = "0.33.0", features = ["logger", "panic_handler", "global_allocator", "alloc", "qemu"] }
