[package]
name = "floppy-crab"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_sprite",
    "bevy_winit",
    "bevy_ui",
    "dynamic_linking",
    "x11",
    "png",
    "vorbis",
    "wav",
] }
rand = "0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
