[package]
name = "paywall"
version = "0.1.0"
edition = "2021"

authors = ["muccc rust group"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-proxy = "0.2.0"
actix-tls = { version = "3.3.0", features = ["rustls"] }
actix-web = { version = "4.5.1" }
awc = { version = "3.4.0", default-features = false, features = ["rustls"] }
base64 = "0.22.0"
orion = "0.17.6"
serde = { version = "1.0.199", features = ["derive"] }
serde_urlencoded = "0.7.1"
tera = "1.19.1"
url = "2.5.0"
urlencoding = "2.1.3"
