[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"

authors = ["muccc rust group"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-map = "0.1.0"
count_instructions = "0.1.4"
nalgebra = "0.32.3"
rayon = "1.10.0"

[profile.dev]
opt-level = 3
